test/assets/invalid/expect-string-not-int.hs
a :: String
a = 1 ++ ""